基本能用了, 但是markdown支持还有问题

--- a/templates/archive.html
+++ b/templates/archive.html
@@ -2,6 +2,7 @@
 
 {% block body %}
 	{% for article in articles %}
-		{% module Article(article) %}
+		<a href="/article/{{ article.id }}"><h1> {{ article.title }} </h1></a>
+		<div class="date">{{ locale.format_date(article.updated_at, full_format=True, shorter=True) }}</div>
 	{% end %}
 {% end %}
