--- a/templates/base.html
+++ b/templates/base.html
@@ -14,8 +14,8 @@
 			<div class="navbar-right">
 				{% if current_user %}
 					<ul class="nav navbar-nav">
-						<li><a href="/compose">login</a></li>
-						<li><a href="/auth/logout">login</a></li>
+						<li><a href="/compose">创作</a></li>
+						<li><a href="/auth/logout">退出</a></li>
 					</ul>
 				{% else %}
 					<ul class="nav navbar-nav">
@@ -27,7 +27,7 @@
 			</div>
 			<div>
 				<ul class="nav navbar-nav">
-					<li><a href="#">文章</a></li>
+					<li><a href="/">文章</a></li>
 					<li><a href="/archive">归档</a></li>
 					<li><a href="/about">关于</a></li>
 				</ul>
