--- a/templates/create_auther.html
+++ b/templates/create_auther.html
@@ -13,7 +13,7 @@
 	<br />
 	密码:
 	<br />
-	<input type="text" name="password" />
+	<input type="password" name="password" />
 	<br /> <br />
 	<input type="submit" value="submit" />
 
