--- a/templates/compose.html
+++ b/templates/compose.html
@@ -4,12 +4,14 @@
 <div class="center-block">
 	<form method="POST">
 		{% if article %}
-			<input type="text" class="form-control" value={{ article.title }} name="title">
+			<input type="text" class="form-control" value="{% raw article.title %}" name="title">
 		{% else %}
 			<input type="text" class="form-control" placeholder="标题" name="title">
 		{% end %}
 		<br /> <br />
-		<textarea class="form-control" rows="10" name="content"></textarea>
+		<textarea class="form-control" rows="10" name="content">
+			{{ article.content }}
+		</textarea>
 		<br /> <br />
 		<select class="form-control" name="clazz">
 			<option>笔记</option>
