--- a/templates/login.html
+++ b/templates/login.html
@@ -1,6 +1,9 @@
 {% extends "base.html" %}
 
 {% block body %}
+	{% if error %}
+	<span style="color: red">Error: {{ error }}</span><p>
+	{% end %}
 	<form method="POST">
 		<input type="text" name="username">
 		<br /> <br />
