--- a/templates/modules/article.html
+++ b/templates/modules/article.html
@@ -1,5 +1,5 @@
-<a href=/compose?id={{ article.id }}><h1>{{ article.title }}</h1></a>
+<a href=/article/{{ article.id }}><h1>{% raw article.title %}</h1></a>
 	<br /> 
 	<div class="date">{{ locale.format_date(article.updated_at, full_format=True, shorter=True) }}</div>
 	<br /> <br />
-	<p>{{ article.content }}</p>
+	{% raw article.content %}
