--- a/templates/modules/article.html
+++ b/templates/modules/article.html
@@ -2,4 +2,4 @@
 	<br /> 
 	<div class="date">{{ locale.format_date(article.updated_at, full_format=True, shorter=True) }}</div>
 	<br /> <br />
-	{% raw article.content %}
+	{% raw article.html %}
