--- a/templates/login.html
+++ b/templates/login.html
@@ -10,5 +10,6 @@
 		<input type="password" name="password">
 		<br /> <br />
 		<input type="submit" value="登录">
+		{% module xsrf_form_html() %}
 	</form>
 {% end %}
